--- a/.html
+++ b/.html
@@ -5,6 +5,13 @@
   <title>BINGO</title>
   <meta http-equiv="content-type" charset="UTF-8">
   <link rel="stylesheet" href="./css/progen3.css?<?php echo time(); ?>" type="text/css"/>
+  <style> 
+    head{color : red; 
+        font-family:"Hiragino Sans";
+         
+        }
+    
+  </style>
 </head>
 
 <style>
