--- a/.html
+++ b/.html
@@ -5,13 +5,9 @@
   <title>BINGO</title>
   <meta http-equiv="content-type" charset="UTF-8">
   <link rel="stylesheet" href="./css/progen3.css?<?php echo time(); ?>" type="text/css"/>
-  <style> 
-    head{color : red; 
-        font-family:"Hiragino Sans";
-         
-        }
-    
-  </style>
+  <style type="text/css">
+title {color: red; font-family:"Hiragino Sans";}
+</style>
 </head>
 
 <style>
