--- a/.html
+++ b/.html
@@ -2,12 +2,9 @@
 <html>
 
 <head>
-  <title>BINGO</title>
+  <title color="red">BINGO</title>
   <meta http-equiv="content-type" charset="UTF-8">
   <link rel="stylesheet" href="./css/progen3.css?<?php echo time(); ?>" type="text/css"/>
-  <style type="text/css">
-title {color: red; font-family:"Hiragino Sans";}
-</style>
 </head>
 
 <style>
@@ -16,15 +13,20 @@ title {color: red; font-family:"Hiragino Sans";}
   }
 
   table th, table td {
-    border: solid 1px black;
+    border: solid 7px black;
   }
+  
 </style>
 
-<body>
+<body background="https://cdn.pixabay.com/photo/2017/12/18/11/43/printing-3025962_1280.jpg">
+  <style>
+    body{background-size: cover;}
+    body{font-size: 50px;}
+    </style>
   <center>
     <h1>BINGO</h1>
 
-    <table style="width: 300px; height: 300px;">
+    <table style="width: 700px; height: 700px;">
       <tbody>
         <tr align="center">
           <td id="cell1"></td>
