--- a/.html
+++ b/.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title color="red">BINGO</title>
+  <title>BINGO</title>
   <meta http-equiv="content-type" charset="UTF-8">
   <link rel="stylesheet" href="./css/progen3.css?<?php echo time(); ?>" type="text/css"/>
 </head>
@@ -25,7 +25,6 @@
     </style>
   <center>
     <h1>BINGO</h1>
-
     <table style="width: 700px; height: 700px;">
       <tbody>
         <tr align="center">
@@ -69,6 +68,10 @@
   <p> <a href="">ルーレットを引く</a> </p>
 
   </center>
+  <style>
+    h1{color:red;}
+    tbody{background-color: white;}
+  </style>
   
   <script type="text/javascript">
     // 乱数を生成し、表のセルにセットする関数
